<resources>
    <string name="app_name">Camppers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom navigation icon name -->
    <string name="item_camp_search">캠핑장</string>
    <string name="item_user_chat">메세지</string>
    <string name="item_home">홈</string>
    <string name="item_community">커뮤니티</string>
    <string name="item_mypage">마이페이지</string>

    <!-- toolbar name -->
    <string name="tb_user_login">로그인</string>
    <string name="tb_camp_search">캠핑장 찾기</string>
    <string name="tb_user_chat">채팅</string>
    <string name="tb_home">홈</string>
    <string name="tb_community">커뮤니티</string>
    <string name="tb_mypage">마이페이지</string>
    <string name="tb_community_add">캠핑라이프 작성</string>

    <!-- button text -->
    <string name="btn_select">선택하기</string>
    <string name="btn_delete">선택삭제</string>
    <string name="btn_new_msg">메세지 작성</string>

    <string name="btn_user_modify">회원정보수정</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_user_delete">회원탈퇴</string>

    <string name="btn_my_post">업로드한 게시물</string>
    <string name="btn_my_reply">작성한 댓글</string>
    <string name="btn_my_favorite">별표한 게시물</string>

    <string name="btn_my_reservation">예약한 캠핑장</string>
    <string name="btn_my_reservation_canceled">취소한 캠핑장</string>
    <string name="btn_my_reservation_finished">방문했던 캠핑장</string>

    <string name="btn_community_write">캠핑라이프 작성</string>
    <string name="btn_add_complete">작성 완료</string>

    <!-- text strings -->
    <string name="text_my_information">내 정보</string>
    <string name="text_my_camping">캠핑장 이용내역</string>
    <string name="text_user_settings">회원 관리</string>
    <string name="text_my_post">게시물 관리</string>

    <!-- client id -->
    <string name="client_id">462374145043-n9i77b3t1pteqk36hb8qgh4vscp529de.apps.googleusercontent.com</string>

</resources>